# Employee-Management-System-

./: CMakeLists.txt  README.md  add_employee.c  add_employee.h  delete_employee.c  delete_employee.h  display_employees.c  display_employees.h  employee.h  main.c  main_menu.c  main_menu.h  save_and_load_file.c  save_and_load_file.h  search_employee.c  search_employee.h  sort_by_department.c  sort_by_department.h  sort_by_designation.c  sort_by_designation.h  sort_by_name.c  sort_by_name.h  update_employee.c  update_employee.h
